variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: not found: value biscuits
while (2 * biscuits == caseOrange + 1) {
           ^